# snarl-neutils

./: .gitignore  CMakeLists.txt  README.md  readme.txt
src/main/: Common.h  DirUtils.cpp  DirUtils.h  FileUtils.cpp  FileUtils.h  StringUtils.cpp  StringUtils.h
src/test/: testDirUtils.cpp  testFileUtils.cpp  testStringUtils.cpp
src/test/resources/: IMG_0642.HEIC
